# reCamera-Edge-AI-Privacy

./: .gitignore  CITATION.cff  README.md
homeassistant_integration/: README.md  flows.json
homeassistant_integration/coco_icons/: README.md
homeassistant_integration/simple-tracker-tests/: README.md  index.js  index_old.js  package-lock.json  package.json  test.js
video_anonymizer/: README.md
video_anonymizer/cpp/: README.md
video_anonymizer/cpp/common/: detector_factory.cpp  detector_factory.h  idetector.h  video_anonymizer.cpp  video_anonymizer.h
video_anonymizer/cpp/default_project/: CMakeLists.txt  build.sh  main.cpp  yoloscpp_detector.cpp  yoloscpp_detector.h
video_anonymizer/cpp/recamera_project/: CMakeLists.txt  build.sh  cvi_h264_streamer.cpp  cvi_h264_streamer.h  cvi_system.cpp  cvi_system.h  frame_capturer.cpp  frame_capturer.h  recamera_detector.cpp  recamera_detector.h  recamera_main.cpp  test_on_recamera.sh
video_anonymizer/python/: anonymizer.py  main.py  preview.py  requirements.txt
